@@ -1,5 +1,11 @@
 2017-10-27  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode.el (ebuild): Rename customisation group.
+	(ebuild-mode-portdir, ebuild-mode-eapi-list)
+	(ebuild-mode-fix-whitespace, ebuild-mode-update-copyright)
+	(ebuild-mode-delete-cvs-line): Update accordingly.
+	(ebuild-mode-update-copyright): Update lwarn type.
+
 	* glep-mode.el (glep-mode-insert-skeleton): Update from GLEP 2.
 	Inclusion of that modification under GPL-2+ acked by mgorny.
 
